Bug 653149: improve contrast for default sec bugs background

--- a/skins/custom/show_bug.css
+++ b/skins/custom/show_bug.css
@@ -12,27 +12,23 @@
 
 /* colorize bugs in various groups */
 body[class*=bz_group_] {
-    background-color: #eeeeff;
+    background-color: #ccccff;
+    border-left: solid red 2px;
+    padding-left: 13px;
 }
 
 body.bz_group_webtools-security,
 body.bz_group_websites-security,
 body.bz_group_bugzilla-security {
     background-color: #ffeeee;
-    border-left: solid red 2px;
-    padding-left: 13px;
 }
 
 body.bz_group_client-services-security {
     background-color: #ffff80;
-    border-left: solid red 2px;
-    padding-left: 13px;
 }
 
 body.bz_group_core-security {
     background-color: #ffe0b0;
-    border-left: solid red 2px;
-    padding-left: 13px;
 }
 
 #legal_disclaimer {
